2011-09-21  David Levin  <levin@chromium.org>

        [chromium] Rebaselines for passing tests and expectation updates/narrowing.

        * platform/chromium-cg-mac-leopard/editing/inserting/editable-inline-element-expected.png: Added.
        * platform/chromium-mac-leopard/css2.1/t090204-display-change-01-b-ao-expected.png: Added.
        * platform/chromium-mac-leopard/editing/inserting/editable-inline-element-expected.png: Added.
        * platform/chromium-mac/css2.1/t090204-display-change-01-b-ao-expected.png:
        * platform/chromium-mac/css2.1/t090204-display-change-01-b-ao-expected.txt: Removed.
        * platform/chromium/test_expectations.txt:

2011-09-21  Julien Chaffraix  <jchaffraix@webkit.org>

        Crash in RenderBox::paintMaskImages when GraphicsContext's painting is disabled
        https://bugs.webkit.org/show_bug.cgi?id=68133

        Reviewed by Darin Adler.

        Those tests checks that we do not crash when calling internals.paintControlTints.

        * platform/mac/Skipped: Skipped 2 tests as they are hitting an ASSERT unrelated to
        this change on Mac.

        * fast/css/webkit-mask-crash-fieldset-legend-expected.txt: Added.
        * fast/css/webkit-mask-crash-fieldset-legend.html: Added.
        * fast/css/webkit-mask-crash-figure-expected.txt: Added.
        * fast/css/webkit-mask-crash-figure.html: Added.
        * fast/css/webkit-mask-crash-table-expected.txt: Added.
        * fast/css/webkit-mask-crash-table.html: Added.
        * fast/css/webkit-mask-crash-td-2-expected.txt: Added.
        * fast/css/webkit-mask-crash-td-2.html: Added.
        * fast/css/webkit-mask-crash-td-expected.txt: Added.
        * fast/css/webkit-mask-crash-td.html: Added.

2011-09-21  Abhishek Arya  <inferno@chromium.org>

        Not use anonymousContainer on beforeChild calculation
        and let later code handle it.
        https://bugs.webkit.org/show_bug.cgi?id=67656

        Reviewed by David Hyatt.
