@@ -1,0 +1,1 @@
+This test passes if it doesn't crash.
