@@ -1,3 +1,15 @@
+2011-09-21  Sergey Glazunov  <serg.glazunov@gmail.com>
+
+        [Chromium] Protect message ports from being deleted in V8MessageEvent::portsAccessorGetter
+        https://bugs.webkit.org/show_bug.cgi?id=68584
+
+        Reviewed by Adam Barth.
+
+        Test: fast/dom/message-port-deleted-by-accessor.html
+
+        * bindings/v8/custom/V8MessageEventCustom.cpp:
+        (WebCore::V8MessageEvent::portsAccessorGetter):
+
 2011-09-21  Anders Carlsson  <andersca@apple.com>
 
         Add back protection against the NSView going away while handling mouseDown
